<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="25dp"
        android:layout_margin="@dimen/card_margin">
        <LinearLayout
            android:id="@+id/linear"
            android:orientation="vertical"
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_color"
                android:text="@string/primer_registro"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/dark_color"
                android:text="@string/decription_dialog"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_color"
                android:text="@string/ventajas"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/dark_color"
                android:text="@string/description_ventajas"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/registroSin"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Canovius GPS"
                    style="@style/ButtonMaterial"/>

                <Button
                    android:id="@+id/cuenta"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuenta_ok"
                    style="@style/ButtonMaterial"  />
            </LinearLayout>


        </LinearLayout>



    </android.support.v7.widget.CardView>

</LinearLayout>
