<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">
            <LinearLayout
                android:id="@+id/linear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:inputType="textEmailAddress"
                    android:layout_margin="15dp"
                    style="@style/estiloEditText"
                    android:textColor="@color/dark_color"
                    android:textColorHint="@color/dark_color"
                    android:hint="@string/maraca_agua_email"
                    />


                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_margin="15dp"
                    android:textColorHint="@color/dark_color"
                    android:drawableLeft="@drawable/password"
                    android:textColor="@color/dark_color"
                    style="@style/estiloEditText"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena" />


                <Button
                    android:id="@+id/login"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    style="@style/ButtonMaterial"
                    android:layout_centerHorizontal="true" />




            </LinearLayout>



        </android.support.v7.widget.CardView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center">
            <LinearLayout
                android:id="@+id/login_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>



</LinearLayout>
